--- a/20deka-prp/20deka-prp.csproj
+++ b/20deka-prp/20deka-prp.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{D5C5038A-58C4-499D-88A5-00232E5DE214}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_20deka_prp</RootNamespace>
+    <RootNamespace>TwentyDeka</RootNamespace>
     <AssemblyName>20deka-prp</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="QRCoder">
       <HintPath>..\packages\QRCoder.1.2.2\lib\net40\QRCoder.dll</HintPath>
     </Reference>
@@ -51,6 +52,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="PurchaseException.cs" />
     <Compile Include="PurchaseItem.cs" />
     <Compile Include="PurchaseReceipt.cs" />
@@ -60,6 +66,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\20deka_logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
